--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "express": "^4.16.4",
     "path": "^0.12.7",
     "rxjs": "^5.5.6",
+    "tslib": "^1.9.0",
     "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.12.0",
     "@angular/cli": "^7.2.3",
     "@angular/compiler-cli": "^5.2.11",
     "@angular/language-service": "^5.2.0",
